...
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

            </com.google.android.material.card.MaterialCardView>

            <ImageButton
                android:id="@+id/ibStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_play_arrow_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewVideoThumbnail" />

            <ImageButton
                android:id="@+id/ibEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
...
